--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -309,7 +309,7 @@ footer.footer .social-link {
 }
 
 footer.footer .social-link:hover {
-  background-color: #155d74;
+  background-color: #15743d;
   text-decoration: none;
 }
 
