--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -219,6 +219,14 @@ h6 {
   background-size: cover;
 }
 
+.callout2 {
+  padding: 13rem 0;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../img/bg-callout2.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .callout h2 {
   font-size: 3.5rem;
   font-weight: 700;
