--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -202,9 +202,9 @@ h6 {
 
 .service-icon {
   background-color: #fff;
-  color: #1D809F;
-  height: 7rem;
-  width: 7rem;
+  color: #3daf2c;
+  height: 10rem;
+  width: 10rem;
   display: block;
   line-height: 7.5rem;
   font-size: 2.25rem;
@@ -319,7 +319,7 @@ footer.footer .social-link {
   width: 4rem;
   line-height: 4.3rem;
   font-size: 1.5rem;
-  background-color: #1D809F;
+  background-color: rgb(255, 255, 255);
   transition: background-color 0.15s ease-in-out;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
@@ -338,14 +338,14 @@ a:hover, a:focus, a:active {
 }
 
 .btn-primary {
-  background-color: #1D809F !important;
-  border-color: #1D809F !important;
-  color: #fff !important;
+  background-color: transparent !important;
+  border-color: #12dd20 !important;
+  color: #12dd20 !important;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background-color: #155d74 !important;
-  border-color: #155d74 !important;
+  background-color: transparent !important;
+  border-color: #12dd20 !important;
 }
 
 .btn-secondary {
@@ -369,7 +369,7 @@ a:hover, a:focus, a:active {
 }
 
 .bg-primary {
-  background-color: #1D809F !important;
+  background-color: rgb(255, 255, 255) !important;
 }
 
 .text-primary {
