--- a/css/table.css
+++ b/css/table.css
@@ -1,40 +1,17 @@
-
-
-/*검색창 디자인*/
-#myInput {
-  /* Add a search icon to input */
- background-position: 10px 12px; /* Position the search icon */
- background-repeat: no-repeat; /* Do not repeat the icon image */
- width: 100%; /* Full-width */
- font-size: 13px; /* Increase font-size */
- padding: 12px 20px 12px 40px; /* Add some padding */
- border: 1px solid #ddd; /* Add a grey border */
- margin-bottom: 12px; /* Add some space below the input */
+<!--테이블 헤더 고정-->
+.table{
+  border-collapse:collapse;
+  width:100%
+}
+.table thead{
+  float: left;
+  width: 100%;
+}
+.table tbody{
+  overflow-y:auto;
+  overflow-x:hidden;
+  float:left; width:100%;
+  height:500px
 }
 
 
-/*테스터 외곽 디자인*/
-#myTable {
- border-collapse: collapse; /* Collapse borders */
- width: 100%; /* Full-width */
- border: 1px solid #ddd; /* Add a grey border */
- font-size: 14px; /* Increase font-size */
-
-}
-
-
-#myTable th, #myTable td {
- text-align: center; /* 테스터들 정렬 */
- padding: 10px; /* 테스트들마다의 패딩 */
-}
-
-#myTable tr {
- /* 테스터들마다 바탁 경계선 */
- border-bottom: 1px solid rgb(221, 221, 221);
-
-}
-
-#myTable tr.header, #myTable tr:hover {
- /* 목차랑 마우스 댔을 때 색상 변하는 것  */
- background-color: #dadada;
-}
