--- a/css/table.css
+++ b/css/table.css
@@ -1,9 +1,13 @@
 <!--테이블 헤더 고정-->
 .table{
   border-collapse:collapse;
-  width:100%
+  width:100%;
+  border: 1px solid #eee;
+  border-bottom: 2px solid #1e7e34;
 }
 .table thead{
+  border-top: 2px solid #1e7e34;
+  border-bottom: 2px solid #1e7e34;
   float: left;
   width: 100%;
 }
@@ -11,7 +15,35 @@
   overflow-y:auto;
   overflow-x:hidden;
   float:left; width:100%;
-  height:500px
+  height:500px;
+  border-bottom: 2px solid #1e7e34;
+}
+.table tbody tr:hover{
+  background-color: #d4edda;
 }
 
+<!--검색 부분-->
 
+.input-group.md-form.form-sm.form-2 input {
+  border: 1px solid #1e7e34;
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+.input-group.md-form.form-sm.form-2 input.lime-border {
+  border: 1px solid #1e7e34;
+
+}
+.input-group.md-form.form-sm.form-2 .input-group-append .input-group-text {
+  background-color: #d4edda;
+  border-color: #1e7e34;
+}
+.input-group.md-form.form-sm.form-2 .input-group-append .input-group-text .fa-search {
+  color: black;
+}
+.input-group.md-form.form-sm.form-2 .category{
+  background-color: #d4edda;
+  color: black;
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+  border: 1px solid #1e7e34;
+}
